--- a/public/web.config
+++ b/public/web.config
@@ -3,14 +3,13 @@
   <system.webServer>
     <rewrite>
       <rules>
-        <!-- Redirect all requests to index.php -->
         <rule name="Laravel" stopProcessing="true">
           <match url=".*" />
           <conditions logicalGrouping="MatchAll">
             <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
             <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
           </conditions>
-          <action type="Rewrite" url="index.php/{R:0}" />
+          <action type="Rewrite" url="index.php" appendQueryString="true" />
         </rule>
       </rules>
     </rewrite>
@@ -20,8 +19,9 @@
         <add value="index.php" />
       </files>
     </defaultDocument>
-        <handlers>
-            <add name="PHP_via_FastCGI" path=".php" verb="" modules="FastCgiModule" scriptProcessor="C:\php\php-cgi.exe" resourceType="File" />
-        </handlers>
+
+    <handlers>
+      <add name="PHP_via_FastCGI" path="*.php" verb="GET,HEAD,POST,DEBUG" modules="FastCgiModule" scriptProcessor="C:\php\php-cgi.exe" resourceType="Either" requireAccess="Script" />
+    </handlers>
   </system.webServer>
 </configuration>
