--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:tGsCR0kjQveFBBh72fzQtIwyVhRlnjc8BbM9Gv3I6nw=
-APP_DEBUG=true
-APP_URL=http://localhost
-APP_DOMAIN=localhost
+APP_DEBUG=false
+APP_URL=http://194.233.79.28
+APP_DOMAIN=http://194.233.79.28
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
