--- a/public/web.config
+++ b/public/web.config
@@ -1,27 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <configuration>
-  <system.webServer>
-    <rewrite>
-      <rules>
-        <rule name="Laravel" stopProcessing="true">
-          <match url=".*" />
-          <conditions logicalGrouping="MatchAll">
-            <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
-            <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
-          </conditions>
-          <action type="Rewrite" url="index.php" appendQueryString="true" />
-        </rule>
-      </rules>
-    </rewrite>
-
-    <defaultDocument>
-      <files>
-        <add value="index.php" />
-      </files>
-    </defaultDocument>
-
-    <handlers>
-      <add name="PHP_via_FastCGI" path="*.php" verb="GET,HEAD,POST,DEBUG" modules="FastCgiModule" scriptProcessor="C:\php\php-cgi.exe" resourceType="Either" requireAccess="Script" />
-    </handlers>
-  </system.webServer>
+    <system.webServer>
+        <rewrite>
+            <rules>
+                <rule name="Laravel" stopProcessing="true">
+                    <match url="^(.*)$" ignoreCase="false" />
+                    <conditions logicalGrouping="MatchAll">
+                        <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
+                        <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
+                    </conditions>
+                    <action type="Rewrite" url="index.php/{R:1}" appendQueryString="true" />
+                </rule>
+            </rules>
+        </rewrite>
+        <defaultDocument>
+            <files>
+                <add value="index.php" />
+            </files>
+        </defaultDocument>
+    </system.webServer>
 </configuration>
