--- a/.env
+++ b/.env
@@ -64,3 +64,10 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+
+CLOUDINARY_KEY=349467229796872
+CLOUDINARY_CLOUD_NAME=ddz1b7gg3
+CLOUDINARY_SECRET=10pCzboUiZnm4-DDp1BX1vnRoSQ
+CLOUDINARY_URL=cloudinary://349467229796872:10pCzboUiZnm4-DDp1BX1vnRoSQ@ddz1b7gg3
+CLOUDINARY_UPLOAD_PRESET=your_upload_preset
