Created the Serivice and controller for sending the sms

--- a/.env
+++ b/.env
@@ -73,3 +73,10 @@ CLOUDINARY_CLOUD_NAME=ddz1b7gg3
 CLOUDINARY_SECRET=10pCzboUiZnm4-DDp1BX1vnRoSQ
 CLOUDINARY_URL=cloudinary://349467229796872:10pCzboUiZnm4-DDp1BX1vnRoSQ@ddz1b7gg3
 CLOUDINARY_UPLOAD_PRESET=your_upload_preset
+
+
+
+SMSPRIMA_TYPE=TEXT
+SMSPRIMA_BASE_URL=https://smsprima.com/api/api/index
+SMSPRIMA_API_KEY=43609a-f66b02-d34cad-667fcd-57f3b1
+SMSPRISMA_SENDER=DigitalSMS
