--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.2",
         "laravel/tinker": "^2.10.1",
+        "phpoffice/phpspreadsheet": "^5.3",
         "stancl/tenancy": "^3.9"
     },
     "require-dev": {
