--- a/.env
+++ b/.env
@@ -25,8 +25,8 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=multytenant
-DB_USERNAME=deepak
-DB_PASSWORD=ShaktaTechnology123@
+DB_USERNAME=root
+DB_PASSWORD=root
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
