--- a/.env
+++ b/.env
@@ -25,7 +25,7 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=multytenant
-DB_USERNAME=root
+DB_USERNAME=deepak
 DB_PASSWORD=ShaktaTechnology123@
 
 SESSION_DRIVER=database
